--- a/exampleSite/static/i18n/no.json
+++ b/exampleSite/static/i18n/no.json
@@ -12,6 +12,8 @@
   "windowed": "Vindauge",
   "archive": "Arkivet",
   "search": "Søk",
+  "show_all": "Vis alle",
+  "read_more": "Vis fleire", 
   "allYears": "Alle år",
   "allMonths": "Alle månadar",
   "month_1": "januar",
@@ -26,7 +28,7 @@
   "month_10": "oktober",
   "month_11": "november",
   "month_12": "desember",
-  "all_types": "Alle publikasjonar",
+  "type_all": "Alle publikasjonar",
   "type_journalArticle": "Artikkel",
   "type_bookSection": "Kapittel",
   "type_book": "Bok",
