--- a/i18n/no.json
+++ b/i18n/no.json
@@ -12,6 +12,8 @@
   "windowed": "Vindauge",
   "archive": "Arkivet",
   "search": "Søk",
+  "show_all": "Vis alle",
+  "read_more": "Vis fleire", 
   "allYears": "Alle år",
   "allMonths": "Alle månadar",
   "month_1": "januar",
