--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,6 +12,8 @@
   "windowed": "Windowed",
   "archive": "The Archive",
   "search": "Search",
+  "show_all": "Show all",
+  "read_more": "Read more", 
   "allYears": "All years",
   "allMonths": "All months",
   "month_1": "January",
